--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xinix/xin-router",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Router for Xin",
   "repository": {
     "type": "git",
@@ -21,25 +21,26 @@
     "clean": "rm -rf dist coverage",
     "lint": "eslint .",
     "test": "karma start",
+    "dev": "karma start --no-single-run",
     "build": "webpack-cli --mode development && webpack-cli --mode production"
   },
   "peerDependencies": {
     "@xinix/xin": "^3.1.2"
   },
   "devDependencies": {
-    "@xinix/xin": "^3.1.2",
+    "@xinix/xin": "^3.1.6",
     "babel-eslint": "^10.0.3",
     "debug": "^4.1.1",
-    "eslint": "^6.2.2",
+    "eslint": "^6.3.0",
     "eslint-config-standard": "^14.1.0",
-    "eslint-config-xinix": "^1.1.7",
+    "eslint-config-xinix": "^1.1.8",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.4",
+    "husky": "^3.0.5",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^4.3.0",
     "karma-chrome-launcher": "^3.1.0",
